# artifact/backend/bff/api/src/main/java/tr/girgin/backend/trading/analysis/platform/bff/controller/api/HealthApiDelegate.java
@@ -1,0 +1,9 @@
+package tr.girgin.backend.trading.analysis.platform.bff.controller.api;
+
+import org.springframework.http.ResponseEntity;
+import tr.girgin.backend.trading.analysis.platform.bff.controller.api.model.SystemHealthDto;
+
+public interface HealthApiDelegate {
+
+    ResponseEntity<SystemHealthDto> getHealth();
+}
